k8s/workloads/aurora/inference/inference-deployment-updated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aurora-inference
  namespace: aurora-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aurora-inference
      track: stable
  template:
    metadata:
      labels:
        app: aurora-inference
        track: stable
    spec:
      containers:
      - name: inference
        image: aayud/aurora-inference:http-canary-v2
        ports:
        - containerPort: 8000

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 25
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 45
          periodSeconds: 10
